prepped modal and worked on some z-index issues, but no resolution.  Code is pretty much unaffected, ready to pick back up and solve the modal issue.

--- a/public/css/bootstrap-password.css
+++ b/public/css/bootstrap-password.css
@@ -106,9 +106,8 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 0;
   background-color: #fff; }
-  /* line 112, app/lib/bootstrap-password */
+  /* line 111, app/lib/bootstrap-password */
   .form-group.bootstrap-password .background-meter .meter > div {
     height: 100%;
     text-indent: -9999em;
